
Table Users {
  id int [pk, increment]
  name varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null]
  role varchar(20) [not null, default: 'customer', note: 'customer | admin']
  phone varchar(20)
  address varchar(255)
  avatar_url varchar(255)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table Categories {
  id int [pk, increment]
  name varchar(100) [not null]
  description varchar(255)
  image_url varchar(255)
  created_at timestamp [default: `now()`]
}

Table Products {
  id int [pk, increment]
  name varchar(150) [not null]
  description text
  price decimal(10,2) [not null]
  stock int [not null, default: 0]
  image_url varchar(255)
  category_id int [not null, ref: > Categories.id]
  rating_avg decimal(2,1) [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table Orders {
  id int [pk, increment]
  user_id int [not null, ref: > Users.id]
  status varchar(20) [not null, default: 'pending', note: 'pending | processing | shipping | completed | cancelled']
  total decimal(10,2) [not null]
  shipping_address varchar(255) [not null]
  shipping_phone varchar(20) [not null]
  payment_method varchar(30) [default: 'cod']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table OrderItems {
  id int [pk, increment]
  order_id int [not null, ref: > Orders.id]
  product_id int [not null, ref: > Products.id]
  quantity int [not null, default: 1]
  price decimal(10,2) [not null, note: 'giá tại thời điểm đặt hàng']
}

Table Reviews {
  id int [pk, increment]
  product_id int [not null, ref: > Products.id]
  user_id int [not null, ref: > Users.id]
  rating int [not null, note: '1-5']
  comment text
  created_at timestamp [default: `now()`]
}

Table Carts {
  id int [pk, increment]
  user_id int [not null, ref: > Users.id]
  product_id int [not null, ref: > Products.id]
  quantity int [not null, default: 1]
  created_at timestamp [default: `now()`]
}
